--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>microsys-common</module>
         <module>microsys-config</module>
         <module>microsys-service</module>
+        <module>microsys-shell</module>
     </modules>
 
     <build>
@@ -142,6 +143,11 @@
                 <artifactId>microsys-service</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>microsys-shell</artifactId>
+                <version>${project.version}</version>
+            </dependency>
 
             <!-- Spark used for micro REST services -->
             <dependency>
@@ -176,6 +182,20 @@
                 <groupId>com.typesafe</groupId>
                 <artifactId>config</artifactId>
                 <version>1.3.0</version>
+            </dependency>
+
+            <!-- The jline library used in the shell to manage console input and output. -->
+            <dependency>
+                <groupId>jline</groupId>
+                <artifactId>jline</artifactId>
+                <version>2.13</version>
+            </dependency>
+
+            <!-- The commons-cli library is used to parse options in the shell commands. -->
+            <dependency>
+                <groupId>commons-cli</groupId>
+                <artifactId>commons-cli</artifactId>
+                <version>1.3.1</version>
             </dependency>
 
             <!-- Common utilities -->
