more unit tests

--- a/microsys-shell/pom.xml
+++ b/microsys-shell/pom.xml
@@ -66,6 +66,12 @@
             <artifactId>slf4j-api</artifactId>
         </dependency>
 
+        <!-- Used to perform testing with curator and zookeeper -->
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-test</artifactId>
+        </dependency>
+
         <!-- Unit Testing -->
         <dependency>
             <groupId>junit</groupId>
