--- a/pom.xml
+++ b/pom.xml
@@ -169,6 +169,19 @@
                 <artifactId>curator-x-discovery</artifactId>
                 <version>2.9.1</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.curator</groupId>
+                <artifactId>curator-test</artifactId>
+                <version>2.9.1</version>
+                <scope>test</scope>
+                <exclusions>
+                    <!-- Prevent dependency convergence issues with org.reflections -->
+                    <exclusion>
+                        <groupId>org.javassist</groupId>
+                        <artifactId>javassist</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
 
             <!-- JSON processing -->
             <dependency>
