--- a/microsys-shell/pom.xml
+++ b/microsys-shell/pom.xml
@@ -70,6 +70,13 @@
         <dependency>
             <groupId>org.apache.curator</groupId>
             <artifactId>curator-test</artifactId>
+            <!-- Prevent dependency convergence issues with org.reflections -->
+            <exclusions>
+                <exclusion>
+                    <groupId>org.javassist</groupId>
+                    <artifactId>javassist</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <!-- Unit Testing -->
