Refactored to use futures end-to-end

--- a/microsys-common/src/main/resources/reference.conf
+++ b/microsys-common/src/main/resources/reference.conf
@@ -13,5 +13,7 @@ server.port.max = 5500
 
 zookeeper.hosts = "127.0.0.1:2181"
 
+executor.threads = 25
+
 shell.history.file = "shell-history.txt"
 
