--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,13 @@
                 </exclusions>
             </dependency>
 
+            <!-- OkHttp used as a REST client library -->
+            <dependency>
+                <groupId>com.squareup.okhttp3</groupId>
+                <artifactId>okhttp</artifactId>
+                <version>3.0.1</version>
+            </dependency>
+
             <!-- Service discovery with zookeeper -->
             <dependency>
                 <groupId>org.apache.curator</groupId>
