--- a/microsys-service/pom.xml
+++ b/microsys-service/pom.xml
@@ -32,6 +32,12 @@
             <artifactId>curator-x-discovery</artifactId>
         </dependency>
 
+        <!-- Used to perform testing with curator and zookeeper -->
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-test</artifactId>
+        </dependency>
+
         <!-- JSON processing -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
