--- a/microsys-config/pom.xml
+++ b/microsys-config/pom.xml
@@ -31,10 +31,11 @@
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
         </dependency>
+
+        <!-- Used to perform testing of REST client library -->
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>mockwebserver</artifactId>
-            <scope>test</scope>
         </dependency>
 
         <!-- Used to perform testing with curator and zookeeper -->
