--- a/microsys-service/pom.xml
+++ b/microsys-service/pom.xml
@@ -38,6 +38,18 @@
             <artifactId>curator-test</artifactId>
         </dependency>
 
+        <!-- OkHttp used as a REST client library -->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+        </dependency>
+
+        <!-- Used to perform testing of REST client library -->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>mockwebserver</artifactId>
+        </dependency>
+
         <!-- JSON processing -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
