--- a/microsys-security/pom.xml
+++ b/microsys-security/pom.xml
@@ -8,7 +8,7 @@
         <version>0.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>microsys-config</artifactId>
+    <artifactId>microsys-security</artifactId>
 
     <dependencies>
         <!-- Project modules -->
