--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,10 @@
     <modules>
         <module>microsys-common</module>
         <module>microsys-config</module>
+        <module>microsys-dist</module>
+        <module>microsys-security</module>
         <module>microsys-service</module>
         <module>microsys-shell</module>
-        <module>microsys-dist</module>
     </modules>
 
     <build>
@@ -152,6 +153,11 @@
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>microsys-config</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>microsys-security</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
