--- a/pom.xml
+++ b/pom.xml
@@ -225,6 +225,13 @@
                 <version>2.5</version>
             </dependency>
 
+            <!-- Null checking annotations -->
+            <dependency>
+                <groupId>com.google.code.findbugs</groupId>
+                <artifactId>annotations</artifactId>
+                <version>3.0.0</version>
+            </dependency>
+
             <!-- System configuration management -->
             <dependency>
                 <groupId>com.typesafe</groupId>
