--- a/microsys-dist/src/rpm/config/application.conf
+++ b/microsys-dist/src/rpm/config/application.conf
@@ -2,7 +2,13 @@
 system.name = ${project.groupId}
 system.version = ${project.version}
 
-ssl.enabled = false
+ssl.enabled = true
+ssl.keystore.file = /home/${project.groupId}/pki/keystore.jks
+ssl.keystore.type = JKS
+ssl.keystore.password = changeit
+ssl.truststore.file = /home/${project.groupId}/pki/truststore.jks
+ssl.truststore.type = JKS
+ssl.truststore.password = changeit
 
 server.threads.max = 12
 server.threads.min = 1
@@ -16,4 +22,6 @@ zookeeper.hosts = "127.0.0.1:2181"
 executor.threads = 25
 
 shell.history.file = "shell-history.txt"
+
+shared.secret.variable = "SHARED_SECRET"
 
