--- a/microsys-dist/src/rpm/config/application.conf
+++ b/microsys-dist/src/rpm/config/application.conf
@@ -13,7 +13,7 @@ ssl.truststore.password = changeit
 server.threads.max = 12
 server.threads.min = 1
 server.timeout = 30 seconds
-server.hostname = 127.0.0.1
+server.hostname = localhost
 server.port.min = 5000
 server.port.max = 5500
 
