--- a/microsys-shell/pom.xml
+++ b/microsys-shell/pom.xml
@@ -23,6 +23,10 @@
         <!-- Project modules -->
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>microsys-config</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>microsys-crypto</artifactId>
         </dependency>
         <dependency>
