fixed retrieval of shared secret and now uses encrypted passwords from the static config

--- a/microsys-service/pom.xml
+++ b/microsys-service/pom.xml
@@ -25,6 +25,10 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>microsys-common</artifactId>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>microsys-crypto</artifactId>
+        </dependency>
 
         <!-- Service discovery with zookeeper -->
         <dependency>
