--- a/microsys-common/src/main/resources/reference.conf
+++ b/microsys-common/src/main/resources/reference.conf
@@ -7,11 +7,12 @@ ssl.enabled = false
 server.threads.max = 12
 server.threads.min = 1
 server.timeout = 30 seconds
-server.hostname = 127.0.0.1
+server.hostname = localhost
 server.port.min = 5000
 server.port.max = 5500
 
 zookeeper.hosts = "127.0.0.1:2181"
+zookeeper.auth.enabled = false
 
 executor.threads = 25
 
