--- a/pom.xml
+++ b/pom.xml
@@ -214,6 +214,11 @@
             <!-- Service discovery with zookeeper -->
             <dependency>
                 <groupId>org.apache.curator</groupId>
+                <artifactId>curator-framework</artifactId>
+                <version>2.9.1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.curator</groupId>
                 <artifactId>curator-x-discovery</artifactId>
                 <version>2.9.1</version>
             </dependency>
